--- a/Boda de Rubén y Isabel_files/style.css
+++ b/Boda de Rubén y Isabel_files/style.css
@@ -238,7 +238,7 @@ section.portada::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.20);
+  /* background-color: rgba(0,0,0,0.20); */
   z-index: 0;
   top: 0;
   left: 0;
